<resources>
    <string name="app_name">Filters</string>
    <string name="input">Entrada</string>
    <string name="message">Mensaje</string>
    <string name="result">Resultado</string>
    <string name="list_filters">Filtros para listas</string>
    <string name="filter_by_predicate">Filtro por predicado</string>
    <string name="filter_indexed">Filtro por índice</string>
    <string name="filter_not">Filtro not</string>
    <string name="filter_instance">Filtro por instancia</string>
    <string name="testing_predicate">Probando el predicado</string>
    <string name="any">Cualquiera</string>
    <string name="none">Ninguno</string>
    <string name="all">Todos</string>
</resources>
