<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tvInputMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        android:text="@string/message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_list" />

    <TextView
        android:id="@+id/tvResultList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputMessage" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultList" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultList">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFilterTitle"
                style="@style/HeaderTitle"
                android:text="@string/list_filters"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="512dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.15"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btFilterByPredicate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/filter_by_predicate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <Button
                android:id="@+id/btFilterIndexed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/filter_indexed"
                app:layout_constraintBaseline_toBaselineOf="@+id/btFilterByPredicate"
                app:layout_constraintStart_toEndOf="@+id/btFilterByPredicate" />

            <Button
                android:id="@+id/btFilterNot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/filter_not"
                app:layout_constraintEnd_toEndOf="@+id/btFilterIndexed"
                app:layout_constraintStart_toStartOf="@+id/btFilterByPredicate"
                app:layout_constraintTop_toBottomOf="@+id/btFilterIndexed" />

            <Button
                android:id="@+id/btFilterInstance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/filter_instance"
                app:layout_constraintStart_toStartOf="@+id/btFilterByPredicate"
                app:layout_constraintTop_toBottomOf="@+id/btFilterNot" />

            <Button
                android:id="@+id/btFilterNotNull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="Filtro no vacio"
                app:layout_constraintBaseline_toBaselineOf="@+id/btFilterInstance"
                app:layout_constraintStart_toEndOf="@+id/btFilterInstance" />

            <!-- Testing predicates -->
            <TextView
                android:id="@+id/tvTestingPredicates"
                style="@style/HeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/testing_predicate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btFilterNotNull" />

            <Button
                android:id="@+id/btAny"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/any"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTestingPredicates" />

            <Button
                android:id="@+id/btNone"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/none"
                app:layout_constraintBaseline_toBaselineOf="@+id/btAny"
                app:layout_constraintStart_toEndOf="@+id/btAny" />

            <Button
                android:id="@+id/btAll"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/all"
                app:layout_constraintBaseline_toBaselineOf="@+id/btNone"
                app:layout_constraintStart_toEndOf="@+id/btNone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>